--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>I love to eat pineapples!</h1>
+    <p>Their scientific name is ananas comosus</p>
     
 </body>
 </html>
